# CarsLegends

./: .gitignore  README.md
DOCUMENTACION/DOCUMENTOS PROPIOS/: LINKS.md
DOCUMENTACION/DOCUMENTOS_PROPIOS/: CALENDARIO CARS LEGENDS.docx
DOCUMENTACION/doc-ABP/: Control-ABP.doc
DOCUMENTACIÓN/doc-ABP/: portfoli-ABP.DOC
RECURSOS/models/: Murcielago1.mtl  pelotas.mtl
RECURSOS/sounds/: sfx.bfxrlibrary
doc-ABP/: Control-ABP.doc  acta-ABP.doc  expo-ABP.ppt  portfoli-ABP.DOC
docs/DOCUMENTOS_PROPIOS/: LINKS.md  MANUAL_CARSLEGENDS.docx
docs/doc-ABP/: acta-ABP.doc  expo-ABP.ppt
game/: .gitignore  CMakeLists.txt  build_macos.sh  unbuild_macos.sh
game/includes/glm/gtx/: transform.hpp
game/src/: Application.cpp  Game.cpp  glad.c
game/src/Components/: Sprite.hpp
game/src/Configurations/: CameraConfiguration.hpp  ManagersConfiguration.hpp  NuklearConfiguration.hpp  WindowConfiguration.hpp
game/src/Coordinators/: Coordinator.hpp
game/src/DataStructures/: ComponentArray.hpp  Types.hpp
game/src/Engine/Buffers/: ElementBuffer.cpp  ElementBuffer.hpp  VertexArray.cpp  VertexBuffer.hpp
game/src/Engine/Buffers/Structs/: Vertex.hpp
game/src/Engine/ModelLoading/: AssimpModelLoader.cpp
game/src/Engine/ModelLoading/Structs/: ModelData.hpp
game/src/Engine/Nuklear/: Nuklear.cpp  Nuklear.hpp
game/src/Engine/Shaders/: ShaderProgram.hpp
game/src/Engine/Textures/: Texture.cpp  Texture.hpp
game/src/Engine/Window/: Window.cpp  Window.hpp
game/src/Events/: Event.cpp
game/src/Macros/: Hash.hpp
game/src/Managers/: ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.hpp  SystemManager.hpp
game/src/Resources/Shaders/: test.frag  test.vert
game/src/Systems/: CameraSystem.cpp  CameraSystem.hpp  ISystem.hpp  MenuSystem.cpp  MenuSystem.hpp  ModelLoadingSystem.cpp  ModelLoadingSystem.hpp  RenderSystem.cpp
game/src/x64/Debug/: CarLegends.exe.recipe
game/src/x64/Debug/CarLegends.tlog/: CarLegends.lastbuildstate  link.command.1.tlog
game/src/x64/Release/CarLegends.tlog/: CL.command.1.tlog
resources/models/: lowpoly-car.mtl
src/: CarsLegends.sln
src/CarLegends/: Application.cpp  CarLegends.vcxproj  CarLegends.vcxproj.filters  Game.cpp  Game.hpp  glad.c
src/CarLegends/Components/: Buttons.hpp  Camera.hpp  CollisionModel.hpp  Gravity.hpp  HitBox.hpp  Labels.hpp  LightSource.h  Playable.hpp  Rendable.hpp  Renderable.hpp  RigidBody.hpp  Transform.hpp
src/CarLegends/Configurations/: CameraConfiguration.hpp  ControllerConfiguration.hpp  GUIConfiguration.hpp  ManagersConfiguration.hpp  WindowConfiguration.hpp
src/CarLegends/Coordinators/: Coordinator.cpp  Coordinator.hpp
src/CarLegends/DataStructures/: ComponentArray.cpp  ComponentArray.hpp  Types.hpp
src/CarLegends/Engine/Buffers/: ElementBuffer.cpp  ElementBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/CarLegends/Engine/Buffers/Structs/: Vertex.hpp
src/CarLegends/Engine/Fonts/: Font.cpp  Font.h
src/CarLegends/Engine/Fonts/Structs/: Character.h
src/CarLegends/Engine/ModelLoading/: AssimpModelLoader.cpp  AssimpModelLoader.hpp
src/CarLegends/Engine/Shaders/: ShaderProgram.cpp  ShaderProgram.hpp
src/CarLegends/Engine/Textures/: Texture.cpp  Texture.hpp
src/CarLegends/Engine/Window/: Window.cpp  Window.hpp
src/CarLegends/Engine/Window/Structs/: ControllerState.hpp  MouseState.hpp
src/CarLegends/Events/: Event.cpp  Event.hpp  EventParameters.hpp  EventTypes.hpp
src/CarLegends/Managers/: ComponentManager.cpp  ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  SystemManager.cpp  SystemManager.hpp
src/CarLegends/Resources/Models/car/: scene.gltf
src/CarLegends/Resources/Models/car2/: license.txt  scene.gltf
src/CarLegends/Resources/Models/car3/: license.txt  scene.gltf
src/CarLegends/Resources/Models/car4/: license.txt  scene.gltf
src/CarLegends/Resources/Models/car5/: license.txt  scene.gltf
src/CarLegends/Resources/Models/cardbox/: scene.gltf
src/CarLegends/Resources/Models/cube/: license.txt  scene.gltf
src/CarLegends/Resources/Models/football/: license.txt  scene.gltf
src/CarLegends/Resources/Models/goal/: scene.gltf
src/CarLegends/Resources/Models/penguin/: license.txt  scene.gltf
src/CarLegends/Resources/Models/piramide/: license.txt  scene.gltf
src/CarLegends/Resources/Models/tabaco/: scene.gltf
src/CarLegends/Resources/Shaders/: test.frag  test.vert
src/CarLegends/Resources/raudio/: raudio.c  raudio.h
src/CarLegends/Resources/sounds/: sfx.bfxrlibrary
src/CarLegends/Systems/: CameraSystem.cpp  CameraSystem.hpp  CollisionModelSystem.cpp  CollisionModelSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  GUISystem.cpp  GUISystem.hpp  GravitySystem.cpp  GravitySystem.hpp  HitBoxCompositionSystem.cpp  HitBoxCompositionSystem.hpp  HitBoxRenderSystem.cpp  HitBoxRenderSystem.hpp  ISystem.hpp  LightSystem.cpp  LightSystem.hpp  ModelLoadingSystem.cpp  ModelLoadingSystem.hpp  PlayerMovementSystem.cpp  PlayerMovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/CarLegends/Systems/Structs/: CollisionData.hpp  Manifold.hpp  Simplex.cpp  Simplex.hpp
src/CarLegends/x64/Debug/: CarLegends.exe.recipe  CarLegends.vcxproj.FileListAbsolute.txt  vc143.idb
src/CarLegendsEngine/: CarLegendsEngine.vcxproj  CarLegendsEngine.vcxproj.filters
src/CarLegendsEngine/Buffers/: ElementBuffer.cpp  ElementBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/CarLegendsEngine/Buffers/Structs/: Vertex.hpp
src/CarLegendsEngine/ModelLoading/: AssimpModelLoader.cpp  AssimpModelLoader.hpp
src/CarLegendsEngine/ModelLoading/Structs/: ModelData.hpp
src/CarLegendsEngine/Shaders/: ShaderProgram.cpp  ShaderProgram.hpp
src/CarLegendsEngine/Textures/: Texture.cpp  Texture.hpp
src/libraries/include/glad/: glad.h
src/libraries/lib/: assimp-vc143-mtd.lib  freetype.lib  glfw3.lib
src/x64/Debug/: CarLegendsEngine.idb  CarLegendsEngine.lib  CarsLegends.exe.recipe
src/x64/Debug/CarsLegends.tlog/: CarsLegends.lastbuildstate
(+36 files in other folders)
